--- a/3.html
+++ b/3.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-     <title>WEB1 - Welcome</title>
+     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8">
 </head>
 
@@ -14,9 +14,9 @@
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <h2>Hello Mr</h2>
+    <h2>JavaScript</h2>
     <p>
-        This page is not already done
+        sushi
     </p>
 </body>
 </html>
